bibtex capital letters

--- a/literatur.bib
+++ b/literatur.bib
@@ -69,7 +69,7 @@
 
 @book{grSchlTrainingslageR,
 	author = {{große Schlarmann}, Jörg},
-	title = {{trainingslageR}. Ein Übungsbuch für R-Einsteiger*innen und Fortgeschrittene},
+	title = {{trainingslageR}. Ein {Übungsbuch} für R-{Einsteiger*innen} und {Fortgeschrittene}},
 	year = {2025},
 	publisher = {Hochschule Niederrhein},
 	address = {Krefeld},
